----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-08-22 Michal Čihař  <michal@cihar.com>
    * sql.php: Don't unset $sql_limit_to_append, we need it later (bug
      #978930, found by Marc).

2004-08-22 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/norwegian: Update, thanks to Sven-Erik Andersen - sven-erik.
    * lang/estonian: Update thanks to Alvar Soome - finsoft.
    * lang/chinese_simplified: updated, thanks to Simon - simon2san
    * lang/latvian: Updated, thanks to Sandis Jerics (saaa2002).
    * lang/bulgarian:  Updated, thanks to Stanislav Yordanov (stanprog).
    * lang/thai: Updated, thanks to Arthit Suriyawongkul.

2004-08-21 Marc Delisle  <lem9@users.sourceforge.net>
    * themes/darkblue_orange/img/logo_left.php: transparent version,
      thanks to Michael Keck
    * db_datadict.php, tbl_printview.php, transformation_wrapper.php:
      commands out of sync
    * tbl_indexes.php: optimize: remove unneeded row count
    * libraries/display_tbl.lib.php: foreign key tooltip not displaying
      in mysqli
    * tbl_replace.php: could not upload a binary field in mysqli
    * libraries/transformations.lib.php: could not change MIME type, etc
      in mysqli
    * lang/danish: Updated, thanks to AlleyKat - dk_alleykat.

2004-08-19 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/*: bug 1009667: do not spell Ms Excel but MS Excel

2004-08-19 Michal Čihař  <michal@cihar.com>
    * read_dump.php: Fixed one case of reload detection (I forgot to update
      second regexp on 2004-08-16) (bug #1011479).

2004-08-17 Michal Čihař  <michal@cihar.com>
    * sql.php: Work with $display_query only if set (Marc spotted this out).
    * libraries/display_export.lib.php: No options text should not be bold red
      (bug #1010759).

2004-08-17 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_select.php, config.inc.php, libraries/config_import.lib.php,